--- a/index.html
+++ b/index.html
@@ -5,55 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content=“IE=edge”>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body id="top">
 
 <header>
     <h2><a href="http://www.pluralsight.com" target="_blank">Pluralsight</a></h2>
     <nav>
-        <ul>
             <li><a href="#top">Top</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#illus">Illustrations</a></li>
             <li><a href="#read">Read</a></li>
             <li><a href="#chapters">Chapters</a></li>
-        </ul>
     </nav>
 </header>
-<section id="hero">
+<section id="hero" class="hero">
+    <div class="background-image" style="background-image: url('images/hero.jpg')"></div>
     <h1>Treasure Island</h1>
     <h3>by Robert Louis Stevenson<br>
-    illustrations by N.C. Wyeth</h3>
+    <span class="smallerheadline">illustrations by N.C. Wyeth</span></h3>
 </section>
 <section id="about">
-    <img src="images/stevenson.jpg" alt="Robert Louis Stevenson" title="Robert Louis Stevenson">
+    <img class="round" src="images/stevenson.jpg" alt="Robert Louis Stevenson" title="Robert Louis Stevenson">
     <h3>About Treasure Island</h3>
     <p>An adventure novel by Scottish author Robert Louis Stevenson, <i>Treasure Island</i> tells a story of &ldquo;buccaneers and buried gold&rdquo;. Children's magazine Young Folks originally serialized the tale between 1881 through 1882 under the title Treasure Island, or The Mutiny of the Hispaniola, credited to the pseudonym &ldquo;Captain George North&rdquo;.</p>
     <p><i>Treasure Island</i> is traditionally considered a coming-of-age story, and is noted for its atmosphere, characters, and action. It is also noted as a wry commentary on the ambiguity of morality&mdash;as seen in Long John Silver&mdash;unusual for children's literature. It is one of the most frequently dramatized of all novels. Its influence is enormous on popular perceptions of pirates, including such elements as treasure maps marked with an &ldquo;X&rdquo;, schooners, the Black Spot, tropical islands, and one-legged seamen bearing parrots on their shoulders.</p>
     <hr>
     <h3>Characters</h3>
-    <ul>
+    <ul class="grid">
         <li>
-            <img src="images/jim-hawkins.jpg" alt="Jim Hawkins" title="Jim Hawkins">
+            <img class="round" src="images/jim-hawkins.jpg" alt="Jim Hawkins" title="Jim Hawkins">
             <h4>Jim Hawkins</h4>
             <p>Jim is the narrator of the story and is around years of age. Though goodhearted and competent, he uncovers the plan for a pirate mutiny making rash decisions but also displaying courage.</p>
         </li>
         <li>
-            <img src="images/long-john.jpg" alt="Long John Silver" title="Long John Silver">
+            <img class="round" src="images/long-john.jpg" alt="Long John Silver" title="Long John Silver">
             <h4>&ldquo;Long John&rdquo; Silver</h4>
             <p>A tavern-keeper in Bristol; the ship&rsquo;s cook; and another pirate that has a wooden leg and a pet parrot called &ldquo;Captain Flint&rdquo; on his shoulder. Silver haunts Jim&rsquo;s memories after the adventure.</p>
         </li>
         <li>
-            <img src="images/ben-gunn.jpg" alt="Ben Gunn" title="Ben Gunn">
+            <img class="round" src="images/ben-gunn.jpg" alt="Ben Gunn" title="Ben Gunn">
             <h4>Ben Gunn</h4>
             <p>Ben Gunn The &ldquo;man of the island,&rdquo; and a reformed pirate. He has been marooned on Treasure Island for three years.</p>
         </li>        
     </ul>
 </section>
 <section id="illus">
-    <img src="images/wyeth.jpg" alt="N.C. Wyeth" title="N.C. Wyeth">
+    <img class="round" src="images/wyeth.jpg" alt="N.C. Wyeth" title="N.C. Wyeth">
     <h3>Illustrations by N.C. Wyeth</h3>
-    <ul>
+    <ul class="grid">
         <li>
             <img src="images/one-last-tremendous-cut.jpg" alt="">
         </li>
@@ -70,9 +70,9 @@
     <hr>
 </section>
 <section id="read">
-<img src="images/brass-telescope.png" alt="All day he hung round the cove, or upon the cliffs, with a brass telescope" title="All day he hung round the cove, or upon the cliffs, with a brass telescope">
+<img class="round" src="images/brass-telescope.png" alt="All day he hung round the cove, or upon the cliffs, with a brass telescope" title="All day he hung round the cove, or upon the cliffs, with a brass telescope">
 <h3>Chapter One<br> 
-The Old Sea-Dog At The &ldquo;Admiral Benbow&rdquo;</h3>
+<span class="smallerheadline">The Old Sea-Dog At The &ldquo;Admiral Benbow&rdquo;</span></h3>
 
 <p>Squire Trelawney, Dr. Livesey, and the rest of these gentlemen having asked me to write down the whole particulars about Treasure Island, from the beginning to the end, keeping nothing back but the bearings of the island, and that only because there is still treasure not yet lifted, I take up my pen in the year of grace 17&#95;&#95; and go back to the time when my father kept the Admiral Benbow inn and the brown old seaman with the sabre cut first took up his lodging under our roof.</p>
 
@@ -121,7 +121,7 @@ Yo-ho-ho, and a bottle of rum!&rdquo;</p>
 <p>Soon after, Dr. Livesey&rsquo;s horse came to the door and he rode away, but the captain held his peace that evening, and for many evenings to come.</p>
 </section>
 <section id="chapters">
-    <img src="images/frontis-piece.jpg" alt="">
+    <img class="round" src="images/frontis-piece.jpg" alt="">
     <h3>Continue Reading</h3>
     <ul>
         <li><a href="#">Chapters &nbsp;2 &#8212; &nbsp;3</a></li>
