--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h3>by Robert Louis Stevenson<br>
     <span class="smallerheadline">illustrations by N.C. Wyeth</span></h3>
 </section>
-<section id="about">
+<section id="about" class="about">
     <img class="round" src="images/stevenson.jpg" alt="Robert Louis Stevenson" title="Robert Louis Stevenson">
     <h3>About Treasure Island</h3>
     <p>An adventure novel by Scottish author Robert Louis Stevenson, <i>Treasure Island</i> tells a story of &ldquo;buccaneers and buried gold&rdquo;. Children's magazine Young Folks originally serialized the tale between 1881 through 1882 under the title Treasure Island, or The Mutiny of the Hispaniola, credited to the pseudonym &ldquo;Captain George North&rdquo;.</p>
@@ -50,26 +50,18 @@
         </li>        
     </ul>
 </section>
-<section id="illus">
+<section id="illus" class="illustrations">
     <img class="round" src="images/wyeth.jpg" alt="N.C. Wyeth" title="N.C. Wyeth">
     <h3>Illustrations by N.C. Wyeth</h3>
     <ul class="grid">
-        <li>
-            <img src="images/one-last-tremendous-cut.jpg" alt="">
-        </li>
-        <li>
-            <img src="images/cover-illustration.jpg" alt="">
-        </li>
-        <li>
-            <img src="images/the-boarders-swarmed-over-the-fence-like-monkeys.jpg" alt="">
-        </li>
-        <li>
-            <img src="images/deadly-wrestle.jpg" alt="">
-        </li>                                    
+        <li class="small" style="background-image: url(images/one-last-tremendous-cut.jpg)"></li>
+        <li class="large" style="background-image: url(images/cover-illustration.jpg)"></li>
+        <li class="small" style="background-image: url(images/the-boarders-swarmed-over-the-fence-like-monkeys.jpg)"></li>
+        <li class="large" style="background-image: url(images/deadly-wrestle.jpg)"></li>                                    
     </ul>
     <hr>
 </section>
-<section id="read">
+<section id="read" class="chap1">
 <img class="round" src="images/brass-telescope.png" alt="All day he hung round the cove, or upon the cliffs, with a brass telescope" title="All day he hung round the cove, or upon the cliffs, with a brass telescope">
 <h3>Chapter One<br> 
 <span class="smallerheadline">The Old Sea-Dog At The &ldquo;Admiral Benbow&rdquo;</span></h3>
@@ -78,7 +70,7 @@
 
 <p>I remember him as if it were yesterday, as he came plodding to the inn door, his sea-chest following behind him in a hand-barrow&mdash;a tall, strong, heavy, nut-brown man, his tarry pigtail falling over the shoulder of his soiled blue coat, his hands ragged and scarred, with black, broken nails, and the saber cut across one cheek, a dirty, livid white. I remember him looking round the cover and whistling to himself as he did so, and then breaking out in that old sea-song that he sang so often afterwards:</p>
 
-<p>&ldquo;Fifteen men on the dead man&rsquo;s chest&mdash;<br>
+<p class="song">&ldquo;Fifteen men on the dead man&rsquo;s chest&mdash;<br>
 Yo-ho-ho, and a bottle of rum!&rdquo;</p>
 
 <p>in the high, old tottering voice that seemed to have been tuned and broken at the capstan bars. Then he rapped on the door with a bit of stick like a handspike that he carried, and when my father appeared, called roughly for a glass of rum. This, when it was brought to him, he drank slowly, like a connoisseur, lingering on the taste and still looking about him at the cliffs and up at our signboard. &ldquo;This is a handy cove,&rdquo; says he at length; &ldquo;and a pleasant sittyated grog-shop. Much company, mate?&rdquo;</p>
@@ -101,7 +93,7 @@ Yo-ho-ho, and a bottle of rum!&rdquo;</p>
 
 <p>He was only once crossed, and that was towards the end, when my poor father was far gone in a decline that took him off. Dr. Livesey came late one afternoon to see the patient, took a bit of dinner from my mother, and went into the parlor to smoke a pipe until his horse should come down from the hamlet, for we had no stabling at the old Benbow. I followed him in, and I remember observing the contrast the neat, bright doctor, with his powder as white as snow and his bright, black eyes and pleasant manners, made with the coltish country folk, and above all, with that filthy, heavy, bleared scarecrow of a pirate of ours, sitting, far gone in rum, with his arms on the table. Suddenly he&mdash;the captain, that is&mdash;began to pipe up his eternal song:</p>
 
-<p>&ldquo;Fifteen men on the dead man&rsquo;s chest&mdash;<br>
+<p class="song">&ldquo;Fifteen men on the dead man&rsquo;s chest&mdash;<br>
 Yo-ho-ho, and a bottle of rum!<br>
 Drink and the devil had done for the rest&mdash;<br>
 Yo-ho-ho, and a bottle of rum!&rdquo;</p>
